Adjust default layout

--- a/assets/styles/app.styl
+++ b/assets/styles/app.styl
@@ -4,7 +4,7 @@
 $color-pack = false
 
 $theme := {
-  primary: #F96673
+  primary: #000000
   accent: #ce93d8
   secondary: #424242
   info: #0D47A1
