--- a/components/header.scss
+++ b/components/header.scss
@@ -10,13 +10,63 @@
 }
 
 .header-navigation {
+  align-items: center;
   display: flex;
+  height: 100%;
   justify-content: flex-end;
+  position: relative;
+}
+
+.logo {
+  display: flex;
+  height: 100%;
+  left: 50%;
+  position: absolute;
+  top: 0;
+  transform: translate(-50%, 0);
+  transition: 200ms;
+  width: 50px;
+
+}
+
+.header-navigation-menu {
+  display: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  transform: translate(68px, 0);
+  transition: 200ms 200ms;
+  @media(min-width: 700px) {
+    display: flex;
+  }
+
+  li {
+    &.menu {
+      font-weight: bold;
+    }
+
+    &.nuxt-link-active {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    a {
+      display: block;
+      padding: 12px;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+  }
 }
 
 .hamburger {
   background-color: rgba(255, 255, 255, 0) !important;
-  transition: background-color 200ms;
+  transition: 200ms 0;
+  @media(min-width: 700px) {
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(100%, 0);
+  }
 
   .icon {
     font-size: 30px;
@@ -24,6 +74,28 @@
   }
 }
 
-#layout:not(.scrollTop) .hamburger {
-  background-color: rgba(255, 255, 255, .5) !important;
+#layout:not(.scrollTop) {
+  .header-navigation-menu {
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(68px, -100%);
+  }
+
+  .logo {
+    opacity: 0;
+    transform: translate(-50%, -100%);
+  }
+
+  .hamburger {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(0, 0);
+    transition-delay: 400ms;
+  }
+}
+
+#layout:not(.scrollTopExtended) {
+  .hamburger {
+    background-color: rgba(255, 255, 255, .5) !important;
+  }
 }
