--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -41,6 +41,11 @@ h2 {
   font-weight: bold;
 }
 
+h1 {
+  margin-top: 1em;
+  margin-bottom: 0.7em;
+}
+
 h2 {
   + .abstract {
     font-size: 1.2em;
@@ -85,6 +90,8 @@ h3 {
     display: flex;
     height: 140px;
     justify-content: center;
+    margin-bottom: 2em;
+    margin-top: 1em;
 
     img {
       width: 900px;
@@ -102,12 +109,17 @@ h3 {
   }
 
   .list__tile--active {
+    .list__tile__title {
+      font-weight: bold;
+    }
+
     .icon {
-      color: $colorGreen;
+      color: $colorFg;
     }
   }
 
   .language {
+    align-items: center;
     display: flex;
     flex-shrink: 0;
     justify-content: center;
@@ -131,9 +143,13 @@ section {
     padding-bottom: 4em;
   }
 
-  &.section--overlay {
+  &.section--dark {
     background-color: rgba(0, 0, 0, .4);
     color: white;
+
+    a {
+      color: $colorPink;
+    }
   }
 }
 
@@ -167,54 +183,25 @@ section {
   }
 }
 
-.dialog-custom {
-  .dialog {
-    background-color: $colorBg;
-    padding: 20px 4vw;
+.dialog__container {
+  display: block !important;
+}
+
+.dialog--custom {
+  background-color: $colorBg;
+
+  .dialog-content {
+    padding: 10px 4vw;
     @media(min-width: $breakpointMedium) {
       padding-left: 40px;
       padding-right: 40px;
     }
-
-    .dialog-footer {
-      display: flex;
-      justify-content: center;
-      margin-top: 1em;
-    }
-  }
-}
-
-.expansion {
-  h4 {
-    margin-top: 1.4em;
-    margin-bottom: 0.4em;
   }
 
-  .expansion-custom {
-    background-color: $colorBg;
-    padding-top: 3px;
-
-    .icon {
-      margin-right: 12px;
-    }
-
-    &.expansion-panel > li {
-      border: 0;
-    }
-
-    .inner {
-      background-color: mix($colorBg, $colorBgSubtle);
-      padding-left: 50px;
-      position: relative;
-
-      &::after {
-        border: 6px solid transparent;
-        border-bottom-color: mix($colorBg, $colorBgSubtle);
-        bottom: 100%;
-        content: '';
-        left: 20px;
-        position: absolute;
-      }
-    }
+  .dialog-footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
   }
+
 }
