--- a/pages/_lang/index.scss
+++ b/pages/_lang/index.scss
@@ -6,26 +6,17 @@
     display: flex;
     height: 100vh;
     justify-content: center;
+    position: relative;
 
     .logo {
       width: 40vw;
     }
-  }
 
-  .flex {
-    padding: 5px;
-
-    .member {
-      align-items: center;
-      background-color: white;
-      display: flex;
-      height: 100px;
-      justify-content: center;
-      padding: 12px;
-    }
-
-    img {
-      max-height: 100%;
+    .more {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
     }
   }
 }
