--- a/components/footer.scss
+++ b/components/footer.scss
@@ -1,7 +1,7 @@
 @import "~assets/styles/variables.scss";
 
 #footer {
-  background-color: $colorBgDark;
+  background-color: rgb(58, 58, 58);
   color: white;
   padding-bottom: 7vw;
   padding-top: 7vw;
