--- a/components/members.scss
+++ b/components/members.scss
@@ -6,6 +6,7 @@
 
     .member {
       align-items: center;
+      box-shadow: 2px 2px rgba(0,0,0,0.3);
       background-color: white;
       display: flex;
       height: 100px;
@@ -19,18 +20,65 @@
   }
 }
 
-.dialog-content {
-  background: $colorBg;
-  box-shadow: 0 -4px 4px rgba(0,0,0,0.05);
-  margin-top: -22px;
-  position: relative;
+.dialog--custom {
+  .dialog-content {
+    padding: 0;
 
-  .logo {
-    display: flex;
-    justify-content: center;
+    .map {
+      background-color: #7dc0d0;
+      color: white;
+      padding-bottom: 46.875%;
+      position: relative;
 
-    img {
-      max-height: 100px;
+      img {
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+      }
+
+      .map-placeholder {
+        font-weight: bold;
+        left: 50%;
+        position: absolute;
+        text-align: center;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+
+        .icon {
+          color: white;
+          font-size: 40px;
+        }
+      }
+    }
+
+    .content {
+      background: $colorBg;
+      box-shadow: 0 -4px 4px rgba(0,0,0,0.05);
+      margin-top: -22px;
+      position: relative;
+      padding: 10px 4vw;
+    }
+
+    .content-logo {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+
+      img {
+        display: inline-flex;
+        max-height: 100px;
+        max-width: 70%;
+        @media(min-width: $breakpointSmall) {
+          max-width: 50%;
+        }
+      }
+    }
+
+    .content-description {
+      margin-bottom: 1em;
     }
   }
 }
