--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -46,9 +46,15 @@ h1 {
   margin-top: 1em;
   margin-bottom: 0.7em;
   text-shadow: 1px 1px rgba(0, 0, 0, .2);
+
+  + .abstract {
+    font-size: 1.3em;
+  }
 }
 
 h2 {
+  margin-bottom: 0.6em;
+
   + .abstract {
     font-size: 1.2em;
   }
@@ -143,6 +149,12 @@ section {
   @media(min-width: $breakpointSmall) {
     padding-top: 6em;
     padding-bottom: 4em;
+  }
+
+  &.section--small {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-align: center;
   }
 
   &.section--dark {
