--- a/assets/styles/app.styl
+++ b/assets/styles/app.styl
@@ -4,13 +4,14 @@
 $color-pack = false
 
 $theme := {
-  primary: #333333
+  primary: rgb(55, 55, 55)
   accent: #ce93d8
   secondary: #424242
   info: #0D47A1
   warning: #ffb300
   error: #B71C1C
   success: #49a577
+  links: rgb(25, 25, 25)
 }
 
 // Import Vuetify styling
