--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -7,8 +7,8 @@
 }
 
 body {
-  color: #333;
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  color: $colorFg;
+  font-family: "din-2014",sans-serif;
   font-size: 16px;
   font-smoothing: auto;
   -webkit-font-smoothing: antialiased;
@@ -37,7 +37,6 @@ h3 {
 
 h1,
 h2 {
-  font-family: "din-2014",sans-serif;
   font-weight: bold;
   text-decoration: underline;
 }
@@ -158,8 +157,10 @@ section {
   }
 
   &.section--dark {
-    background-color: rgba(0, 0, 0, .3);
+    position: relative;
     color: white;
+    background-color: $colorBgDark;
+    mix-blend-mode: multiply;
 
     a {
       color: $colorPink;
@@ -229,5 +230,4 @@ section {
     justify-content: center;
     margin-top: 1em;
   }
-
 }
