--- a/assets/styles/app.styl
+++ b/assets/styles/app.styl
@@ -4,9 +4,9 @@
 $color-pack = false
 
 $theme := {
-  primary: rgb(55, 55, 55)
+  primary: rgb(25, 25, 25)
   accent: #ce93d8
-  secondary: #424242
+  secondary: rgb(120, 120, 120)
   info: #0D47A1
   warning: #ffb300
   error: #B71C1C
