--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -38,13 +38,12 @@ h3 {
 h1,
 h2 {
   font-weight: bold;
-  text-decoration: underline;
+  text-transform: uppercase;
 }
 
 h1 {
   margin-top: 1em;
   margin-bottom: 0.7em;
-  text-shadow: 1px 1px rgba(0, 0, 0, .2);
 
   + .abstract {
     font-size: 1.3em;
