--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -73,15 +73,6 @@ h3 {
   }
 }
 
-#background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: $colorGreen;
-}
-
 #layout {
   display: flex;
   flex-direction: column;
@@ -148,79 +139,65 @@ h3 {
 }
 
 section {
-  padding-top: 4em;
-  padding-bottom: 3em;
-  @media(min-width: $breakpointSmall) {
-    padding-top: 6em;
-    padding-bottom: 4em;
-  }
-
-  &.border-bottom,
-  &.border-top {
-    position: relative;
-    overflow: hidden;
-  }
-
-  &.border-bottom {
-    padding-bottom: 5em;
-    @media(min-width: $breakpointSmall) {
-      padding-bottom: 6em;
-    }
-
-    &::after {
-      background-image: url('~assets/images/border.svg');
-      background-repeat: no-repeat;
-      bottom: 0;
-      content: '';
-      height: 50px;
-      left: 50%;
-      position: absolute;
-      transform: translateX(-30px);
-      width: 700px;
-    }
-  }
-
-  &.border-top {
-    padding-top: 5em;
-    @media(min-width: $breakpointSmall) {
-      padding-top: 7em;
-    }
-
-    &::before {
-      background-image: url('~assets/images/border.svg');
-      background-repeat: no-repeat;
-      content: '';
-      height: 50px;
-      position: absolute;
-      right: 50%;
-      top: 0;
-      transform: translateX(30px) scale(-1, -1);
-      width: 700px;
-    }
+  &.intro {
+    min-height: 100vh;
   }
 
   &.section--small {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
     text-align: center;
+
+    .section-inner {
+      padding-top: 0.5em;
+      padding-bottom: 0.5em;
+    }
   }
 
   &.section--dark {
-    position: relative;
     color: white;
-    background-color: $colorBgDark;
     mix-blend-mode: multiply;
 
-    &.border-bottom,
-    &.border-top {
-      &::after,
-      &::before {
-        background-image: url('~assets/images/border-light.svg');
-      }
+    .section-inner {
+      background-color: $colorBgDark;
     }
 
     a {
       color: $colorPink;
+    }
+  }
+
+  .section-inner {
+    padding-top: 4em;
+    padding-bottom: 3em;
+    @media(min-width: $breakpointSmall) {
+      padding-top: 6em;
+      padding-bottom: 4em;
+    }
+  }
+}
+
+.wave {
+  background-image: url('~assets/images/border-wave.svg');
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: repeat-x;
+  height: 5vw;
+  @media(min-width: $breakpointLarge) {
+    height: 40px;
+  }
+
+  &.wave-top {
+    margin-top: 5vw;
+    transform: translateY(1px);
+    @media(min-width: $breakpointLarge) {
+      margin-top: 40px;
+    }
+  }
+
+  &.wave-bottom {
+    margin-bottom: 5vw;
+    transform: translateY(-1px) scale(1, -1);
+    @media(min-width: $breakpointLarge) {
+      margin-bottom: 40px;
     }
   }
 }
