--- a/pages/_lang/label.scss
+++ b/pages/_lang/label.scss
@@ -1,7 +1,7 @@
 @import "~assets/styles/variables.scss";
 
 #label {
-  .label .logo {
+  .intro .logo {
     width: 160px;
     margin-left: auto;
     margin-right: auto;
