Create terms component, refactoring

--- a/components/members.scss
+++ b/components/members.scss
@@ -1,6 +1,12 @@
 @import "~assets/styles/variables.scss";
 
 .members {
+  .spinner {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
   .flex {
     padding: 5px;
 
