--- a/pages/_lang/join.scss
+++ b/pages/_lang/join.scss
@@ -1,30 +1,3 @@
 @import "~assets/styles/variables.scss";
 
-#join {
-  .address-preview .proposition {
-    background-color: lightblue;
-    border: 1px dashed;
-    padding: 4px 8px 0;
-  }
-
-  .component-uploadcare {
-    .preview {
-      .image {
-        object-fit: contain;
-        max-height: 150px;
-        width: 240px;
-      }
-    }
-
-    .btn-upload {
-      .icon {
-        margin-right: 0.3em;
-      }
-    }
-
-    .stateError {
-      color: #b71c1c;
-      min-height: 19px;
-    }
-  }
-}
+#join {}
