--- a/pages/_lang/join.scss
+++ b/pages/_lang/join.scss
@@ -1,3 +1,16 @@
 @import "~assets/styles/variables.scss";
 
 #join {}
+
+.dialog--done {
+  padding: 16px;
+
+  .done {
+    padding: 1em;
+
+    .icon {
+      font-size: 4em;
+    }
+
+  }
+}
