Add login component to join form

--- a/components/joinForm.scss
+++ b/components/joinForm.scss
@@ -28,7 +28,15 @@
     }
   }
 
+  .terms {
+    margin-bottom: 1em;
+  }
+
   .component-login {
     margin-bottom: 1em;
+  }
+
+  .component-terms {
+    float: left;
   }
 }
