Add users db, improve admin

--- a/components/header.scss
+++ b/components/header.scss
@@ -19,7 +19,11 @@
 
 .user {
   margin-right: auto;
+  max-width: 40%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   transition: 200ms;
+  white-space: nowrap;
 }
 
 .logo {
