--- a/pages/_lang/label.scss
+++ b/pages/_lang/label.scss
@@ -7,28 +7,29 @@
     margin-right: auto;
   }
 
-  .benefits {
-    .box {
-      margin-bottom: 1em;
-      padding: 0.2em;
+  .box {
+    margin-bottom: 1em;
+    padding: 0.2em;
+    font-size: 1.1em;
 
-      &:first-child {
-        .box-inner {
-          @media(min-width: 960px) {
-            border-left: 0;
-          }
-        }
-      }
-
+    &:first-child {
       .box-inner {
-        border-left: 3px solid $colorBgDark;
-        padding: 0.5em 2em;
+        @media(min-width: 960px) {
+          border-left: 0;
+        }
       }
     }
 
+    .box-inner {
+      border-left: 3px solid currentColor;
+      height: 100%;
+      padding: 0.5em 2em;
+    }
+  }
+
+  .benefits {
     ul {
       margin-top: 1em;
-      font-size: 1.1em;
       text-align: left;
       line-height: 1.2;
 
