Improve join form and member dialog

--- a/components/members.scss
+++ b/components/members.scss
@@ -123,6 +123,20 @@
         display: block;
       }
     }
+
+    .content-buttons {
+      margin-bottom: 1em;
+
+      .btn {
+        margin-bottom: 0;
+      }
+    }
+
+    .content-social {
+      > a {
+        padding: 4px;
+      }
+    }
   }
 
   .admin-zone {
