--- a/components/members.scss
+++ b/components/members.scss
@@ -56,9 +56,9 @@
       display: flex;
       width: 100%;
       justify-content: center;
-      padding: 10px;
+      padding: 7px;
       position: relative;
-      margin-top: -40px;
+      margin-top: -26px;
 
       .image {
         background-color: white;
@@ -67,15 +67,16 @@
         box-shadow: 0 1px 5px rgba(0,0,0,.1);
         display: inline-flex;
         padding: 2px;
-        width: 60px;
+        width: 46px;
       }
 
       .name {
         flex-grow: 1;
+        font-size: 0.9em;
         line-height: 20px;
         max-width: 100%;
         overflow: hidden;
-        padding-left: 4px;
+        padding-left: 5px;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
