--- a/components/members.scss
+++ b/components/members.scss
@@ -196,10 +196,24 @@
     }
   }
 
-  .admin-zone {
+  .admin {
     margin-top: 20px;
-    background-color: #d8e9e0;
-    padding: 10px;
-    border: 2px dashed #a1b1a9;
+    background-color: fade-out($colorGreen, .9);
+    padding: 5px 10px 10px;
+    border: 2px dashed $colorGreen;
+    width: 100%;
+
+    &.danger {
+      background-color: fade-out(red, .9);
+      border-color: red;
+    }
+
+    .admin-title {
+      color: darken($colorGreen, 50);
+      font-size: 0.8em;
+      text-align: right;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
   }
 }
