Minor transition adjustments

--- a/layouts/default.scss
+++ b/layouts/default.scss
@@ -382,6 +382,20 @@ section {
   opacity: 0;
 }
 
+.transition-up-enter-active {
+  transition: all 0.3s 0.2s ease;
+}
+
+.transition-up-leave-active {
+  transition: all 0.8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+
+.transition-up-enter,
+.transition-up-leave-to {
+  transform: translateY(-10px);
+  opacity: 0;
+}
+
 .fade-enter-active,
 .fade-leave-active {
   transition: opacity 0.5s;
