--- a/components/members.scss
+++ b/components/members.scss
@@ -30,11 +30,12 @@
 
       .icon-container,
       img {
-        position: absolute;
+        height: 100%;
         left: 0;
+        object-fit: cover;
+        position: absolute;
         top: 0;
         width: 100%;
-        height: 100%;
       }
 
       .icon-container {
