Introduce story page, add indiz story, refactor layout

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -4,12 +4,13 @@ $breakpointSmall: 600px;
 $breakpointMedium: 995px;
 $breakpointLarge: 1200px;
 $breakpointExtraLarge: 1400px;
-$colorSubtle: #5d5d5d;
 
 $headerHeight: 68px;
 
 $colorBg: white;
 $colorFg: rgb(25, 25, 25);
+$colorSubtle: #5d5d5d;
+$colorBorder: #e0e0e0;
 
 // MadeInBasel Colors
 $colorGreen: #78ffcc;
