--- a/components/layout.scss
+++ b/components/layout.scss
@@ -170,6 +170,19 @@ h3 {
   font-weight: bold;
 }
 
+.aspectRatioKeeper {
+  position: relative;
+  padding-bottom: 9/16 * 100%;
+
+  > * {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+}
+
 .boundaries {
   flex-basis: 100%;
   margin-left: auto;
@@ -182,6 +195,13 @@ h3 {
     padding-left: 12px;
     padding-right: 12px;
   }
+}
+
+.boundaries-xl {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  width: $maxPageSize + 400px;
 }
 
 .abstract {
