--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -19,3 +19,17 @@ $colorBlue: #00ffff;
 
 $colorBgDark: $colorFg;
 $colorBgLight: rgba(255, 255, 255, .9);
+
+@mixin boundaries() {
+  flex-basis: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  padding-left: 4vw;
+  padding-right: 4vw;
+  width: $maxPageSize;
+  @media(min-width: $breakpointMedium) {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
