--- a/components/layout.scss
+++ b/components/layout.scss
@@ -166,10 +166,7 @@ h3 {
   }
 }
 
-.btn {
-  font-weight: bold;
-}
-
+// Helpers
 .aspectRatioKeeper {
   position: relative;
   padding-bottom: 9/16 * 100%;
@@ -184,24 +181,7 @@ h3 {
 }
 
 .boundaries {
-  flex-basis: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  padding-left: 4vw;
-  padding-right: 4vw;
-  width: $maxPageSize;
-  @media(min-width: $breakpointMedium) {
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-}
-
-.boundaries-xl {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  width: $maxPageSize + 400px;
+  @include boundaries();
 }
 
 .abstract {
@@ -233,15 +213,6 @@ h3 {
   @media(min-width: $breakpointSmall) {
     width: 70%;
   }
-}
-
-.stepper__step--active + .stepper__content .stepper__wrapper {
-  //fix for form click feedback (radios/checkboxes)
-  overflow: visible;
-}
-
-.dialog__container {
-  display: block !important;
 }
 
 .dialog--custom {
@@ -366,4 +337,22 @@ h3 {
 .fade-enter,
 .fade-leave-to {
   opacity: 0;
+}
+
+//Vuetify overwrites
+.btn {
+  font-weight: bold;
+}
+
+.parallax img {
+  max-width: none;
+}
+
+.stepper__step--active + .stepper__content .stepper__wrapper {
+  //fix for form click feedback (radios/checkboxes)
+  overflow: visible;
+}
+
+.dialog__container {
+  display: block !important;
 }
