--- a/pages/stories/indiz.scss
+++ b/pages/stories/indiz.scss
@@ -1,23 +1,49 @@
 @import '~assets/styles/variables.scss';
 
 #story {
-  font-size: 1.2em;
+  font-size: 1.3em;
   padding-top: 70px;
+
+  h2 {
+    text-align: left;
+    margin-bottom: 0.1em;
+  }
+
+  .text {
+    align-items: center;
+    display: flex;
+    margin-top: 3em;
+    margin-bottom: 3em;
+
+    &:not(:first-of-type) {
+      min-height: 30vh;
+    }
+  }
 
   .cover {
     margin-bottom: 2em;
 
     .cover-image.aspectRatioKeeper {
-      padding-bottom: 1/3*100%;
+      padding-bottom: 1/2*100%;
+      max-height: 50vh;
 
-      img {
-        object-fit: cover;
+      @media(min-width: $breakpointSmall) {
+        padding-bottom: 1/3*100%;
+      }
+
+      .m-parallax-clipper {
+        img {
+          height: 60%;
+          @media(min-width: $breakpointExtraLarge) {
+            height: 100%;
+          }
+        }
       }
     }
 
     .cover-info {
       .label {
-        padding-top: 12px;
+        margin-top: -15%;
         text-transform: uppercase;
       }
     }
@@ -25,12 +51,19 @@
 
   .business {
     align-items: flex-end;
-    justify-content: flex-end;
     display: flex;
+    justify-content: flex-end;
+    transform: translateY(-50%);
     width: 100%;
 
     .business-thumb {
-      width: 20%;
+      width: 30%;
+      transform: translateY(1) scale(1);
+      transition: 200ms;
+
+      @media(min-width: $breakpointSmall) {
+        width: 20%;
+      }
 
       .aspectRatioKeeper {
         padding-bottom: 100%;
@@ -45,12 +78,53 @@
     }
   }
 
-  h2 {
-    text-align: left;
+  .media-boundaries {
+    @media(min-aspect-ratio: 16/9) {
+      @include boundaries();
+      width: $maxPageSize + 200px;
+    }
   }
 
-  .text {
-    margin-top: 2em;
-    margin-bottom: 2em;
+  .m-parallax {
+    &.full.aspectRatioKeeper {
+      padding-bottom: 100vh;
+    }
+
+    .m-parallax-clipper {
+      clip: rect(0,auto,auto,0);
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+
+      img,
+      video {
+        height: 100%;
+        left: 0;
+        object-fit: cover;
+        top: 0;
+        width: 100%;
+      }
+
+      img {
+        position: fixed;
+      }
+
+      video {
+        object-fit: contain;
+        @media(min-width: $breakpointSmall) and (min-aspect-ratio: 1/1) {
+          position: fixed;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+}
+
+#layout:not(.scrollTop) {
+  #story .business .business-thumb {
+    opacity: 0;
+    transform: translateY(20%) scale(.7);
   }
 }
